# ldapex

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  prompt_logo.md  rustfmt.toml  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.roadmap/: activity_log.jsonl  dependencies.json  phases.json  project.json
.roadmap/tasks/: 01300d01-cef4-4c3e-84e8-2c7ba13c5054.json  03b8c83d-0b94-4e83-93d4-781dbe4c4586.json  07052b75-2cbf-48cd-8815-5d82cfa37dac.json  091939d5-a23a-4ada-aaad-0017ab29c9bc.json  0cea89a5-b2e1-4229-a168-a13b39e77773.json  1c3c904b-2052-4ccb-ac65-7694c008b218.json  1c730c00-2308-4ca5-9ffc-3dbce4a89c12.json  27d0de22-5568-48db-a8db-3d16f66925c7.json  281f1ee6-fe5b-4710-81e7-bbae7377b964.json  33d0a344-270e-485b-a0d3-cf74fbbafb23.json  368ee716-21f9-4dbf-b961-94ca2ecc48d4.json  384925a4-9493-445e-acc6-4cf865c5e3d2.json  390ef43d-6b16-4b10-95c1-598d51fd7f3b.json  3b9dfe36-725c-46ee-a716-d34a0a6ce762.json  3eb3558d-9cc6-44de-a14d-922129814c75.json  3f148298-ed14-4fe1-a48d-8dbf423a38f7.json  41fd8aeb-7427-4810-b771-a673c251f265.json  43165429-1059-4f89-b966-67cef0c17cf1.json  4547064c-769b-43e9-8ca6-c917165b23d3.json  4783070c-5983-4736-a41d-9ec11332d53a.json  4bd32b7c-7c4b-422a-9e07-77ae2cd9de3f.json  4c3513d0-e863-495a-8b18-0a5272ec5c17.json  4daa1d82-fa57-4187-9af2-5f6f43439967.json  4fc2c0bc-2d2e-46f7-b936-143281517b3c.json  55e27ae5-db87-4dc7-8ed3-e1d067a89ec6.json  5a11c5d1-082c-45f4-95e5-975b44c4ec96.json  5a9e33d1-5302-46d8-a314-67cfc36fe848.json  613b3287-9e31-427a-b1de-6ceffe42bb71.json  61b0181f-6e07-4556-8818-9044e0f15113.json  65b42305-0371-4e26-8e7e-d0345b110f09.json  701e47d8-f213-4377-a264-c9f20b3660bd.json  74203493-87da-44f9-9b2f-cfd6d99c7df6.json  74a6f10a-5e14-4f55-90f2-f1c3cf77a514.json  787c49a7-5cac-444f-8d0a-3d684c3ffe14.json  7a94e0c7-598d-4711-8306-cc151d899894.json  7c4204dc-1a1b-44f0-817b-eb2d70100bba.json  7d2346b6-1b27-48fb-9521-39ad46877dac.json  7f5423a8-b581-46ff-8b65-b842f46411db.json  8003d2a4-3294-47f7-99be-1bdb9bab33cf.json  80ac71c7-b589-4547-809c-f48da56ce134.json  (+28 more)
crates/ldapex-app/: Cargo.toml  tauri.conf.json
crates/ldapex-app/capabilities/: default.json
crates/ldapex-app/icons/: icon.icns
crates/ldapex-app/src/: commands.rs  lib.rs  logging.rs  main.rs  profiles.rs
crates/ldapex-core/: Cargo.toml
crates/ldapex-core/src/: client.rs  error.rs  ldif.rs  lib.rs  profile.rs  schema.rs  types.rs
crates/ldapex-core/tests/: integration.rs
docker/openldap/: docker-compose.yml  seed.ldif
docs/adr/: 0001-native-shell.md  0001-shell-natif.md
docs/user-guide/: book.toml
docs/user-guide/src/: SUMMARY.md  browsing-and-editing.md  first-connection.md  installation.md  introduction.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: bookmarks.svelte.ts  bridge.ts  clipboard.ts  filter.ts  history.svelte.ts  ldif-parser.ts  notes.svelte.ts  selection.svelte.ts  session.svelte.ts  shortcuts.svelte.ts  theme.svelte.ts
frontend/src/lib/components/: BookmarksPanel.svelte  BulkBar.svelte  CommandPalette.svelte  CreateEntryDialog.svelte  CsvImportDialog.svelte  DensityToggle.svelte  DitNode.svelte  DitTree.svelte  EntryPanel.svelte  FilterBuilder.svelte  HistoryDialog.svelte  Icon.svelte  LdifWorkbench.svelte  LoginForm.svelte  ProfileEditor.svelte  ProfilePicker.svelte  SchemaPanel.svelte  SearchPanel.svelte  ServerInfoDialog.svelte  ThemeToggle.svelte
frontend/src/lib/i18n/: index.ts
frontend/src/lib/i18n/messages/: en.json  fr.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
