[package]
name = "ldapex-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tauri shell for the Ldapex desktop application"
default-run = "ldapex-app"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ldapex-core = { path = "../ldapex-core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
custom-protocol = ["tauri/custom-protocol"]
